<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/myLayout"
    android:stretchColumns="0"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView android:text="@string/title"
        android:layout_x="110dp"
        android:layout_y="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView android:text="@string/national_id"
        android:layout_x="30dp"
        android:layout_y="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText android:id="@+id/editPersonId"
        android:inputType="number"
        android:layout_x="150dp"
        android:layout_y="50dp"
        android:layout_width="150dp"
        android:layout_height="40dp"/>
    <TextView android:text="@string/first_name"
        android:layout_x="30dp"
        android:layout_y="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText android:id="@+id/editFirstName"
        android:inputType="text"
        android:layout_x="150dp"
        android:layout_y="100dp"
        android:layout_width="150dp"
        android:layout_height="40dp"/>
    <TextView android:text="@string/last_name"
        android:layout_x="30dp"
        android:layout_y="150dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText android:id="@+id/editLastName"
        android:inputType="text"
        android:layout_x="150dp"
        android:layout_y="150dp"
        android:layout_width="150dp"
        android:layout_height="40dp"/>
    <TextView android:text="@string/facility_id"
        android:layout_x="30dp"
        android:layout_y="200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText android:id="@+id/editFacilityId"
        android:inputType="number"
        android:layout_x="150dp"
        android:layout_y="200dp"
        android:layout_width="150dp"
        android:layout_height="40dp"/>
    <TextView android:text="@string/facility_name"
        android:layout_x="30dp"
        android:layout_y="250dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText android:id="@+id/editFacilityName"
        android:inputType="text"
        android:layout_x="150dp"
        android:layout_y="250dp"
        android:layout_width="150dp"
        android:layout_height="40dp"/>
    <Button	  android:id="@+id/btnAdd"
        android:text="@string/add"
        android:layout_x="30dp"
        android:layout_y="300dp"
        android:layout_width="100dp"
        android:layout_height="40dp"/>
    <Button	  android:id="@+id/btnDelete"
        android:text="@string/delete"
        android:layout_x="150dp"
        android:layout_y="300dp"
        android:layout_width="100dp"
        android:layout_height="40dp"/>
    <Button   android:id="@+id/btnModify"
        android:text="@string/modify"
        android:layout_x="30dp"
        android:layout_y="350dp"
        android:layout_width="100dp"
        android:layout_height="40dp"/>
    <Button   android:id="@+id/btnView"
        android:text="@string/view"
        android:layout_x="150dp"
        android:layout_y="350dp"
        android:layout_width="100dp"
        android:layout_height="40dp"/>
    <Button   android:id="@+id/btnViewPerson"
        android:text="@string/view_person"
        android:layout_x="30dp"
        android:layout_y="400dp"
        android:layout_width="100dp"
        android:layout_height="40dp"/>
    <Button   android:id="@+id/btnShowInfo"
        android:text="@string/show_info"
        android:layout_x="150dp"
        android:layout_y="400dp"
        android:layout_width="100dp"
        android:layout_height="40dp"/>
    <Button   android:id="@+id/btnViewAssessments"
        android:text="@string/view_assessments"
        android:layout_x="30dp"
        android:layout_y="450dp"
        android:layout_width="100dp"
        android:layout_height="40dp"/>
    <Button   android:id="@+id/btnViewAssessmentsQuestions"
        android:text="@string/view_assessments_questions"
        android:layout_x="150dp"
        android:layout_y="450dp"
        android:layout_width="100dp"
        android:layout_height="40dp"/>
    <Button   android:id="@+id/btnDownload"
        android:text="@string/download"
        android:layout_x="30dp"
        android:layout_y="500dp"
        android:layout_width="100dp"
        android:layout_height="40dp"/>
    <Button   android:id="@+id/btnUpload"
        android:text="@string/upload"
        android:layout_x="150dp"
        android:layout_y="500dp"
        android:layout_width="100dp"
        android:layout_height="40dp"/>

</AbsoluteLayout>